# dida-sgx

./: .gitignore  CMakeLists.txt  dida_without_bf  didasgx  sgx_run_with_bf_improvement.txt
cmake/Modules/: ConfigureDida.cmake
cmake/Templates/: DIDA.CMakeLists.txt.cmake
docker/: Dockerfile
sample/: CMakeLists.txt
sample/DIDA/: CMakeLists.txt  didasgx
sample/DIDA/App/: App.cpp
sample/DIDA/App/TrustedLibrary/: Libcxx.cpp  LibcxxDsp.cpp  LibcxxDsp.h  LibcxxMrg.cpp  LibcxxMrg.h
sample/DIDA/Common/: config.h  dsp.cpp  dsp.h  prt.cpp
sample/DIDA/Enclave/: Enclave.config.xml  Enclave.cpp  Enclave.edl  Enclave.h
sample/DIDA/Enclave/TrustedLibrary/: Libcxx.cpp  Libcxx.edl  LibcxxDsp.cpp  LibcxxDsp.edl  LibcxxMrg.cpp  LibcxxMrg.edl
